# srtrust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/skills/tdd-cycle/: SKILL.md
.github/workflows/: ci.yml
crates/srt/: Cargo.toml  README.md
crates/srt-protocol/: Cargo.toml  README.md
crates/srt-protocol/proptest-regressions/: control.txt  loss_list.txt  packet.txt  recv_buffer.txt  send_buffer.txt  timestamp.txt
crates/srt-protocol/proptest-regressions/crypto/: key_material.txt
crates/srt-protocol/src/: connection.rs  control.rs  drift.rs  error.rs  fec.rs  handshake.rs  lib.rs  listener.rs  live_cc.rs  loss_list.rs  packet.rs  rate.rs  recv_buffer.rs  rtt.rs  send_buffer.rs  seq.rs  stats.rs  timestamp.rs
crates/srt-protocol/src/connection/: arq.rs  config.rs  event.rs  rekey.rs  setup.rs
crates/srt-protocol/src/crypto/: cipher.rs  kek.rs  key_material.rs  mod.rs  wrap.rs
crates/srt-protocol/tests/: arq.rs  close.rs  conn_request.rs  dropreq.rs  encryption.rs  fec.rs  flow_window.rs  handshake.rs  keepalive.rs  key_rotation.rs  live_cc.rs  message.rs  network_model.rs  recv_flow_control.rs  rejection.rs  socket_ids.rs  stats.rs  timeouts.rs  tsbpd.rs
crates/srt-protocol/tests/sim/: mod.rs
crates/srt/examples/: echo.rs  interop_caller.rs  interop_listener.rs  restream.rs  srt_bench.rs  tx_receiver.rs  tx_sender.rs
crates/srt/src/: batch.rs  driver.rs  error.rs  lib.rs  runtime.rs  stream.rs
crates/srt/tests/: accept_backlog.rs  accept_semantics.rs  backpressure.rs  config_validation.rs  conn_request.rs  gso_loopback.rs  interop.rs  interop_edge.rs  interop_intense.rs  lifecycle.rs  listener_shutdown.rs  loopback.rs  pacing.rs  rebind.rs  second_runtime.rs  stalled_receiver.rs  stream_api.rs  tracing_events.rs  wan.rs
crates/srt/tests/helpers/: srt_echo.c
crates/srt/tests/interop_util/: mod.rs
