[workspace]
resolver = "3"
members = ["crates/srt-protocol", "crates/srt"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["Thomas Symborski <thomas.symborski@gmail.com>"]
repository = "https://github.com/zsiec/srtrust"
homepage = "https://github.com/zsiec/srtrust"
keywords = ["srt", "streaming", "video", "networking", "sans-io"]
categories = ["network-programming", "multimedia"]

# Deny-by-default lints applied to every crate in the workspace.
# These are the backbone of "max safety, idiomatic modern Rust".
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Promote the pedantic/nursery groups to warnings; we opt out case-by-case.
pedantic = { level = "warn", priority = -1 }
# A few that fire constantly and add little signal for this codebase:
module_name_repetitions = "allow"
must_use_candidate = "allow"
