[package]
name = "srt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Tokio + quinn-udp I/O layer for the sans-I/O srt-protocol core (SRT, Secure Reliable Transport)"

[lints]
workspace = true

[dependencies]
# `version` (alongside `path`) is required so the dependency resolves on crates.io
# when this crate is published; locally the `path` wins.
srt-protocol = { path = "../srt-protocol", version = "0.1.0" }
bytes = "1"
tokio = { version = "1", features = ["net", "rt", "time", "sync", "macros"] }
quinn-udp = "0.6"
thiserror = "2"
getrandom = "0.2"
socket2 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
# A second async runtime, used only to prove the `Runtime` trait is genuinely
# swappable (the `second_runtime` integration test drives the whole stack on it).
smol = "2"
